added school to html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
        <h1>
          Apaar Mehra
        </h1>
+       <h2>
+        School of Music
+       </h2>
       </div>
       
     </div>
