added more detail

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
          Apaar Mehra
        </h1>
        <h2>
-        School of Music
+        School of Music - Music Technology
        </h2>
       </div>
       
