--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
        <h2>
         School of Music - Music Technology
        </h2>
+
+       <h3>Im from .........</h3>
       </div>
       
     </div>
