--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
       
     </div>
   
+
+
   <div>
     <p>
       THIS IMAGE IS MY  <strong>NAME</strong>
@@ -54,6 +56,12 @@
   <p>Hello, World!</p>
 </div>
      
+
+<audio controls>
+
+  <source src="audio1.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
 
 <div class="grid-container">
 
