--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
       </div>
       
     </div>
+
+
   
 
 
@@ -71,6 +73,29 @@ Your browser does not support the audio element.
     <img src="image1.JPG" alt="">
 
 </div>
+
+<!-- Header -->
+<header id="header">
+  <div class="logo">
+    <span class="icon fa-gem"></span>
+  </div>
+  <div class="content">
+    <div class="inner">
+      <h1>Dimension</h1>
+      <p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
+      for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+    </div>
+  </div>
+  <nav>
+    <ul>
+      <li><a href="#intro">Intro</a></li>
+      <li><a href="#work">Work</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <!--<li><a href="#elements">Elements</a></li>-->
+    </ul>
+  </nav>
+</header>
   
     
   </body>
@@ -82,6 +107,7 @@ Your browser does not support the audio element.
   
   
   
+
   
   
   
