added new images

--- a/.github/index.html
+++ b/.github/index.html
@@ -68,13 +68,13 @@ Your browser does not support the audio element.
 <div class="grid-container">
 
     <img src="image1.JPG" alt="">
-    <img src="image2.jpg" alt="">
-    <img src="image3.jpg" alt="">
+    <img src="image2.JPG" alt="">
+    <img src="image3.JPG" alt="">
     <img src="image4.JPG" alt="">
 
 </div>
 
-
+  
     
   </body>
 <!-- END OF OUR BODY 
