--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="Apaar">
       <h1>Apaar Mehra</h1>
       <h2>School of Music - Music Technology</h2>
-      <h3>Im from .........</h3>
+      <h3>Im from New Delhi, India</h3>
     </div>
 
 
@@ -39,7 +39,7 @@
 
   <div>
     <p>
-      THIS IMAGE IS MY  <strong>NAME</strong>
+      THIS IS SOME MUSIC I MADE   <strong>NAME</strong>
     </p>
   </div>
   
@@ -51,7 +51,7 @@
 
 <audio controls>
 
-  <source src="audio1.mp3" type="audio/mpeg">
+  <source src="GrooveWMe_Master.wav" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 
