added menus to both new pages

--- a/ContactMe.html
+++ b/ContactMe.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Contant Me</h1>
+    <div class="MainMenu">
+        <a href="aboutme.html">About Me</a>
+            <a href="ContactMe.html">Contact Me</a>  
+          
+        </div>
 </body>
 </html>
